# radio-epg

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  collect.yml  deploy-worker.yml  live-probe.yml
data/: radio_channels.json  sources.json
data/mappings/: cbs.json  community.json  ebs.json  kbs.json  mbc.json  regional.json  sbs.json  tbn.json
docs/: api.md  database.md  images.md  source-coverage.md
docs/plans/: 2026-07-13-radio-epg-api-design.md  2026-07-13-radio-epg-api-implementation.md  2026-07-14-additional-station-schedules-design.md  2026-07-14-additional-station-schedules-implementation.md  2026-07-14-disable-wbs-collection-design.md  2026-07-14-disable-wbs-collection.md  2026-07-14-image-ingestion-design.md  2026-07-14-image-ingestion-implementation.md  2026-07-14-partial-now-batch-design.md  2026-07-14-partial-now-batch-implementation.md  2026-07-14-two-day-epg-retention-design.md  2026-07-14-two-day-epg-retention-implementation.md  2026-07-15-channel-scoped-event-ids-design.md  2026-07-15-channel-scoped-event-ids.md  2026-07-15-disable-image-publication-design.md  (+7 more)
scripts/: sync_radio_catalog.mjs
tests/: test_broadcast_time.py  test_catalog.py  test_cli.py  test_collector.py  test_fixture_validation.py  test_http.py  test_ids.py  test_image_publisher.py  test_models.py  test_publisher.py  test_readme.py  test_registry.py  test_validation.py  test_workflows.py
worker/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
(+127 files in other folders)
