[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radio-epg"
version = "0.1.0"
description = "한국 라디오 편성표 수집기"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4",
    "cairosvg",
    "defusedxml",
    "httpx",
    "pillow",
    "pydantic",
    "pypdf",
]

[project.scripts]
radio-epg = "radio_epg.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "respx",
    "ruff",
    "ty",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["radio_epg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
